--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(117, 159, 170);
+    background-color: #a3d7f8;
     font-family: 'Roboto','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     user-select: none;
 }
@@ -19,11 +19,11 @@ p{
     transform: translate(-50%, -50%); */
     /* margin: 0 auto; */
     /* transform: translate(0, 50%); */
-    background-color: rgb(108, 156, 197);
+    background-color: rgb(95, 158, 213);
     width: fit-content;
     /* height: 40%; */
     text-align: center;
-    outline: 6px double black;
+    outline: black 2px solid;
     padding: 5% 5%;
     display: flex;
     flex-direction: column;
@@ -131,7 +131,7 @@ p{
 }
 
 #help{
-    background-color: rgb(182, 217, 42);
+    background-color: rgb(217, 255, 0);
 }
 
 #okdialog{
